registered in blackbox: redmine-tidy.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 env
 *.pyc
 redmine-tidy.json
-redmine_tidy.json
 .vscode
 *.egg-info
 /.blackbox/pubring.gpg~
 /.blackbox/pubring.kbx~
 /.blackbox/secring.gpg
 /crontab-tickbeat
+/redmine-tidy.json
